--- a/Текстовый файл.html
+++ b/Текстовый файл.html
@@ -10,7 +10,7 @@
  
 </head>
 
-<body> 
+<body background="https://image.freepik.com/free-photo/texture-grey-pastel-paper-background-template-for-your-design_75163-851.jpg" > 
 
 <style>
 #outer-grid > 
